--- a/Docker/dockerLearning/compose.yaml
+++ b/Docker/dockerLearning/compose.yaml
@@ -1,10 +1,15 @@
+version: "3.3"
 services:
   mysql:
-    image: 'mysql:latest'
+    image: mysql:latest
     environment:
-      - 'MYSQL_DATABASE=mydatabase'
-      - 'MYSQL_PASSWORD=secret'
-      - 'MYSQL_ROOT_PASSWORD=verysecret'
-      - 'MYSQL_USER=myuser'
+      MYSQL_DATABASE: "demo"
+      MYSQL_USER: "user"
+      MYSQL_PASSWORD: "password"
+      MYSQL_ROOT_PASSWORD: "password"
     ports:
-      - '3306'
+      - "3305:3306"
+    volumes:
+      - my-db:/var/lib/mysql
+volumes:
+  my-db:
