--- a/Docker/dockerLearning/src/main/resources/application.properties
+++ b/Docker/dockerLearning/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 # MYSQL address: jdbc:mysql://localhost:3306/schemaname?serverTimezone=UTC
-spring.datasource.url=jdbc:mysql://localhost:3306/demo?serverTimezone=UTC
+spring.datasource.url=${DB_URL:jdbc:mysql://localhost:3305/demo?serverTimezone=UTC}
 
 # ${VARIABLE} => environment variable - do not push password / usernames etc. to git!
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.username=${DB_USERNAME:root}
+spring.datasource.password=${DB_PASSWORD:password}
 
 # DDL mode. This is actually a shortcut for the "hibernate.hbm2ddl.auto" property. Default to "create-drop" (create tables on start, delete at the end)
 # e.g. update = update new columns
