--- a/RabbitMQ/Project 2/springBootRabbitMQ/src/main/resources/application.properties
+++ b/RabbitMQ/Project 2/springBootRabbitMQ/src/main/resources/application.properties
@@ -1,4 +1,9 @@
- spring.rabbitmq.host=localhost
- spring.rabbitmq.port=5672
- spring.rabbitmq.username=guest
- spring.rabbitmq.password=guest
+# RabbitMQ configurations
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
+rabbitmq.queue.name=javaguides
+rabbitmq.exchange.name=javaguides_exchange
+rabbitmq.routing.key.name=javaguides_routing_key
