--- a/RabbitMQ/Project 2/springBootRabbitMQ/src/main/resources/application.properties
+++ b/RabbitMQ/Project 2/springBootRabbitMQ/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.rabbitmq.password=guest
 rabbitmq.queue.name=javaguides
 rabbitmq.exchange.name=javaguides_exchange
 rabbitmq.routing.key.name=javaguides_routing_key
+rabbitmq.queue.json.name=javaguides_json
+rabbitmq.routing.json.key=javaguides_routing_json_key
