--- a/PostgreSQL/Spring Boot & PostrgeSQL Connection/postgreSQLConnection/src/main/resources/application.properties
+++ b/PostgreSQL/Spring Boot & PostrgeSQL Connection/postgreSQLConnection/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/democonnection
+spring.datasource.url=jdbc:postgresql://localhost:5432/democonnection?currentSchema=democonnection
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 
