--- a/LiquiBase/Project 2/liquibaseDemoProjectTwo/src/main/resources/application.properties
+++ b/LiquiBase/Project 2/liquibaseDemoProjectTwo/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 
 # DDL mode. Default to "create-drop" (create tables on start, delete at the end)
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 
 # Show or not log for each SQL query
 spring.jpa.show-sql=true
@@ -19,5 +19,3 @@ spring.liquibase.change-log=classpath:/db/changelog/2023-11-initial-script.yaml
 # Specify the Liquibase context to execute (optional)
 spring.liquibase.contexts=development,test
 
-# Additional Liquibase configurations if required
-spring.liquibase.default-schema=democonnection
