--- a/Cucumber/build.gradle
+++ b/Cucumber/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.2.1'
     id 'io.spring.dependency-management' version '1.1.4'
-    // id 'org.liquibase.gradle' version '2.2.1'
+    id 'org.liquibase.gradle' version '2.2.1'
 }
 
 group = 'com.example'
@@ -23,6 +23,7 @@ repositories {
 }
 
 dependencies {
+    // Spring Boot
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
@@ -42,15 +43,25 @@ dependencies {
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
 
     // Liquibase dependencies
-    // implementation 'org.liquibase:liquibase-core:4.12.1'
-    // runtimeOnly 'org.liquibase:liquibase-groovy-dsl:4.12.1' // For Groovy DSL support, optional
-    // runtimeOnly 'org.postgresql:postgresql' // PostgresSQL driver, if not already added
+    implementation 'org.liquibase:liquibase-core'
 
     // Cucumber dependencies
     testImplementation 'io.cucumber:cucumber-java:7.15.0'
     testImplementation 'io.cucumber:cucumber-junit:7.15.0'
 }
 
+liquibase {
+    activities {
+        main {
+            changeLogFile 'src/main/resources/db/changelog.yml'
+            url 'jdbc:postgresql://localhost:5432/democonnection?currentSchema=democonnection'
+
+            // Use environment variables for username and password
+            username System.getenv('DB_USERNAME') ?: 'postgres'
+            password System.getenv('DB_PASSWORD') ?: 'password'
+        }
+    }
+}
 
 tasks.named('test') {
     useJUnitPlatform()
